--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,12 +8,12 @@ on:
   workflow_dispatch:
 
 env:
-  TOKEN: ${{ secrets.GITHUB_BOT_TOKEN }}
+  TOKEN: ${{ secrets.LINUX_SURFACE_BOT_TOKEN }}
   BRANCH_HOLD: u/hold
   BRANCH_CURRENT: u/current
   BRANCH_STAGING: u/staging
   BRANCH_REPO: repo
-  GPG_KEY: ${{ secrets.SURFACE_GPG_KEY }}
+  GPG_KEY: ${{ secrets.LINUX_SURFACE_GPG_KEY }}
   GPG_KEY_ID: 56C464BAAC421453
 
 jobs:
